fix(home-empty-state): clean up CSS to avoid overlapping elements

--- a/src/app/home/empty-state/empty-state.component.less
+++ b/src/app/home/empty-state/empty-state.component.less
@@ -1,9 +1,7 @@
 @import (reference) '../../../assets/stylesheets/shared/osio.less';
 
-.center-vertical {
-  position: relative;
-  transform: translateY(25%);
-  top: 75%;
+.empty-state-container {
+  display: inline-block;
 }
 
 .welcome-text {
@@ -18,9 +16,8 @@
 }
 
 .codebase-icon {
-  display: block;
-  margin: 0 auto;
-  width: 40%;
+  min-width: 30%;
+  max-width: 40%;
   padding-top: 60px;
   padding-bottom: 60px;
 }
